--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,4 +1,27 @@
 region: us-east-1
 version: 2021-03-15
 
-resources: []
+resources:
+  - name: DenyLargeInstances
+    description: SCP to deny large EC2, RDS, and SageMaker instances plus AI services
+    resource_file: policies/deny_large_instances.json
+    deploy_method: scp
+    deployment_targets:
+      organizational_units:
+        - Customer
+
+  - name: DenyOrganizations
+    description: SCP to hide Organizations API, block management account access, and deny IAM console access
+    resource_file: policies/deny_organizations.json
+    deploy_method: scp
+    deployment_targets:
+      organizational_units:
+        - Customer
+
+  - name: DenyServices
+    description: SCP to deny all AI services and large instance types
+    resource_file: policies/deny_services.json
+    deploy_method: scp
+    deployment_targets:
+      organizational_units:
+        - Customer
