--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,7 +4,7 @@ version: 2021-03-15
 resources:
   - name: DenyLargeInstances
     description: SCP to deny large EC2, RDS, and SageMaker instances plus AI services
-    resource_file: policies/deny_large_instances.json
+    resource_file: policies/deny_instances.json
     deploy_method: scp
     deployment_targets:
       organizational_units:
@@ -18,36 +18,3 @@ resources:
       organizational_units:
         - Customer
 
-  - name: DenyServices
-    description: SCP to deny all AI services and large instance types
-    resource_file: policies/deny_services.json
-    deploy_method: scp
-    deployment_targets:
-      organizational_units:
-        - Customer
-
-  - name: IAMBaseline
-    description: IAM baseline with security audit role, billing role, and password policy
-    resource_file: templates/iam-baseline.yaml
-    deploy_method: stack_set
-    deployment_targets:
-      organizational_units:
-        - Customer
-    parameters:
-      - parameter_key: ManagementAccountId
-        parameter_value: '204726797441'
-      - parameter_key: MaxSessionDuration
-        parameter_value: '3600'
-
-  - name: Budgets
-    description: AWS Budgets for cost management and alerts
-    resource_file: templates/budgets.yaml
-    deploy_method: stack_set
-    deployment_targets:
-      organizational_units:
-        - Customer
-    parameters:
-      - parameter_key: BudgetAmount
-        parameter_value: '100'
-      - parameter_key: NotificationEmail
-        parameter_value: 'alerts@example.com'
