--- a/manifest.yaml
+++ b/manifest.yaml
@@ -17,3 +17,11 @@ resources:
     deployment_targets:
       organizational_units:
         - Customer
+
+  - name: BudgetAlerts
+    description: Monthly budget with SNS alerts for cost monitoring
+    resource_file: templates/budgets.yaml
+    deploy_method: stack_set
+    deployment_targets:
+      organizational_units:
+        - Customer
