--- a/templates/iam-users.yaml
+++ b/templates/iam-users.yaml
@@ -12,81 +12,58 @@ Parameters:
     Default: readonly-user
     Description: Username for the read-only IAM user
 
-  CreateLoginProfile:
-    Type: String
-    Default: 'false'
-    AllowedValues:
-      - 'true'
-      - 'false'
-    Description: Whether to create console login profiles for users
-
-Conditions:
-  CreateLoginProfiles: !Equals [!Ref CreateLoginProfile, 'true']
-
 Resources:
+  AdminGroup:
+    Type: AWS::IAM::Group
+    Properties:
+      GroupName: !Sub '${AdminUserName}-group'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AdministratorAccess
+
+  ReadOnlyGroup:
+    Type: AWS::IAM::Group
+    Properties:
+      GroupName: !Sub '${ReadOnlyUserName}-group'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/ReadOnlyAccess
+
   AdminUser:
     Type: AWS::IAM::User
     Properties:
       UserName: !Ref AdminUserName
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess
+      Groups:
+        - !Ref AdminGroup
       Tags:
         - Key: Purpose
           Value: Administrative access
         - Key: ManagedBy
           Value: ControlTower
 
-  AdminUserLoginProfile:
-    Type: AWS::IAM::LoginProfile
-    Condition: CreateLoginProfiles
-    Properties:
-      UserName: !Ref AdminUser
-      PasswordResetRequired: true
-      Password: !Sub '{{resolve:secretsmanager:${AdminUserSecret}:SecretString:password}}'
-
-  AdminUserSecret:
-    Type: AWS::SecretsManager::Secret
-    Condition: CreateLoginProfiles
-    Properties:
-      Name: !Sub '${AdminUserName}-credentials'
-      Description: !Sub 'Credentials for ${AdminUserName}'
-      GenerateSecretString:
-        SecretStringTemplate: !Sub '{"username": "${AdminUserName}"}'
-        GenerateStringKey: password
-        PasswordLength: 16
-        ExcludeCharacters: '"@/\'
-
   ReadOnlyUser:
     Type: AWS::IAM::User
     Properties:
       UserName: !Ref ReadOnlyUserName
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/ReadOnlyAccess
+      Groups:
+        - !Ref ReadOnlyGroup
       Tags:
         - Key: Purpose
           Value: Read-only access
         - Key: ManagedBy
           Value: ControlTower
 
-  ReadOnlyUserLoginProfile:
-    Type: AWS::IAM::LoginProfile
-    Condition: CreateLoginProfiles
+  AdminUserAddToGroup:
+    Type: AWS::IAM::UserToGroupAddition
     Properties:
-      UserName: !Ref ReadOnlyUser
-      PasswordResetRequired: true
-      Password: !Sub '{{resolve:secretsmanager:${ReadOnlyUserSecret}:SecretString:password}}'
+      GroupName: !Ref AdminGroup
+      Users:
+        - !Ref AdminUser
 
-  ReadOnlyUserSecret:
-    Type: AWS::SecretsManager::Secret
-    Condition: CreateLoginProfiles
+  ReadOnlyUserAddToGroup:
+    Type: AWS::IAM::UserToGroupAddition
     Properties:
-      Name: !Sub '${ReadOnlyUserName}-credentials'
-      Description: !Sub 'Credentials for ${ReadOnlyUserName}'
-      GenerateSecretString:
-        SecretStringTemplate: !Sub '{"username": "${ReadOnlyUserName}"}'
-        GenerateStringKey: password
-        PasswordLength: 16
-        ExcludeCharacters: '"@/\'
+      GroupName: !Ref ReadOnlyGroup
+      Users:
+        - !Ref ReadOnlyUser
 
 Outputs:
   AdminUserArn:
@@ -101,12 +78,10 @@ Outputs:
     Export:
       Name: !Sub '${AWS::StackName}-ReadOnlyUserArn'
 
-  AdminUserSecretArn:
-    Condition: CreateLoginProfiles
-    Description: ARN of the Secrets Manager secret containing admin credentials
-    Value: !Ref AdminUserSecret
+  AdminGroupArn:
+    Description: ARN of the admin IAM group
+    Value: !GetAtt AdminGroup.Arn
 
-  ReadOnlyUserSecretArn:
-    Condition: CreateLoginProfiles
-    Description: ARN of the Secrets Manager secret containing read-only credentials
-    Value: !Ref ReadOnlyUserSecret
+  ReadOnlyGroupArn:
+    Description: ARN of the read-only IAM group
+    Value: !GetAtt ReadOnlyGroup.Arn
